# CPP_ITMO

bigint/bigint_32/: big_integer.cpp  big_integer.h
bigint/bigint_64/: CMakeLists.txt  big_integer.cpp  big_integer.h
bigint_32/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp
bigint_32_2/: CMakeLists.txt  big_integer.cpp  big_integer.h  my_vector.cpp  my_vector.h
bigint_32_2/gtest/: gtest-all.cc
cpp_exam/: CMakeLists.txt  fixed_vector.h  test.cpp  vector_tests.cpp
huffman/: CMakeLists.txt
huffman/huffman_lib/: CMakeLists.txt  byte_vector.cpp  code_len.cpp  counter.cpp  decoder.cpp  encoder.cpp
huffman/huffman_lib/include/: byte_vector.h  code_len.h  constants.h  counter.h  decoder.h  encoder.h
huffman/test/: encode_decode_test.cpp
huffman/utils/: decode.cpp  encode.cpp
